# RCompiler-FAQ

./: CMakeLists.txt  Makefile  ir_test.cpp  ir_test.py  lexer_test.cpp  main.cpp  semantic_test.cpp  semantic_test.py
include/: ir.hpp  lexer.hpp  parser.hpp  semantic_check.hpp
src/: lexer.cpp
